Update maven dependencies (jetty 10->11)
Signed-off-by: or-shachar <or.shachar@wiz.io>